fix: kanban board header gap

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -592,20 +592,6 @@
     right: -15px !important;
   }
 }
-//---------
 
 
-[data-layout=horizental] .app-header{
-  .language-picker__button{
-    background-color: var(--gray-800);
-  }
-  .language-picker__flag{
-    color: var(--gray-300)
-  }
-  .language-picker__item[aria-selected=true]{
-    color: white
-  }
-  .language-picker__list li a{
-    color: black;
-  }
-}
+
