--- a/src/sass/pages/_kanban-board.scss
+++ b/src/sass/pages/_kanban-board.scss
@@ -5,7 +5,7 @@
   &-header {
     display: flex;
     align-items: center;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     justify-content: space-between;
     h5 {
       margin: 0;
